--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <a href="#"><i class="fab fa-facebook-f"></i> facebook</a>
                 <a href="#"><i class="fab fa-twitter"></i> twitter</a>
                 <a href="#"><i class="fab fa-instagram"></i> instagram</a>
-                <a href="#"><i class="fab fa-linkedin"></i> linkedin</a>
+                <a href="https://github.com/Bhagwatilal"><i class="fab fa-github"></i> Github</a>
                 <a href="#"><i class="fab fa-twitter"></i> twitter</a>
             </div>
         </div>
