--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zindgi</title>
 
-    <link rel="shortcut icon" href="./chai copy.png" type="image/svg+xml">
+    <link rel="shortcut icon" href="./Tea-shop/chai.png" type="image/svg+xml">
 
     <!-- SWIPER -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
