--- a/index.html
+++ b/index.html
@@ -77,8 +77,11 @@
                 revitalizes your spirit and makes your day truly special. Savor each sip and let it fill you with energy and joy.</p>
 
                 <h2>
-                    मोहब्बत मैं रंग का ज्यादा फर्क नहीं पड़ता साहब,<br>
-                    मैने उबले दूध से ज्यादा चाय के दीवाने देखे है ।
+               <pre>                   अकेले बैठे हैं समाजदारो की भिड़ में 
+                    एक राय जरूरी है,
+                    कोई हमारा साथ दे या ना दे
+                    हमारे लिए तो बस एक चाय जरूरी है ।
+                </pre>
                 </h2>
                 <a href="#" class="btn">read more</a>
                 <div class="icons-container">
