--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             </div>
         </div>
 
-        <div class="credit">created by <span>Bhagwatilal</span> | all rights reserved</div>
+        <div class="credit">created by <span>Bhagwatilal with 💖</span> | all rights reserved</div>
     </section>
 
 
